changed: Plugins are media sources not folders changed: consolidated plugin code in GUIViewState* plugins show up as sources in the root directory removed: all the 'Manage XX plugins' from Settings page. will use the add source dialog instead
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/addons-fwork@26544 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2132,11 +2132,11 @@
   <string id="23067">Manage Music Scrapers</string>
   <string id="23068">Manage Program Scrapers</string>
   <string id="23069">Manage Screensaver</string>
-  <string id="23070">Manage PVR plugins</string>
-  <string id="23071">Manage Video plugins</string>
-  <string id="23072">Manage Music plugins</string>
-  <string id="23073">Manage Program plugins</string>
-  <string id="23074">Manage Picture plugins</string>
+  <string id="23070"></string>
+  <string id="23071"></string>
+  <string id="23072"></string>
+  <string id="23073"></string>
+  <string id="23074"></string>
   <string id="23075">Manage Weather plugins</string>
   <string id="23076">Manage Audio DSP's</string>
   <string id="23077">Manage TV-Show Scrapers</string>
