changed: Updated TV Database (old must be deleted before next start) fixed: Don't flood log with "Failed with code: 550 (No schedule found)" is not really a error changed: increased time for EPG cleanup to 10 minutes added: portal information for Channel Info Tags fixed: Double load and update of channels and recordings on startup fixed: EPG memory storage was not correct removed: depency to CVideoInfoTag inside cPVREPGInfoTag added: Automatic EPG update during runtime added: Store EPG data inside TV Database changed: Improved EPG Load function added: Remove overlapping events during EPG update fixed: Ticket: #8328, Teletext does not work moved: EPG FilterEntry function to EPGSearchFilter structure moved: EVENT_CONTENT_MASK's to xbmc_pvr_types.h changed: Load PVR Backend Time correction only on client creation added: Fast Zapping for channel up and down (timeout selectable over settings)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@26548 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1513,9 +1513,6 @@
   <string id="18009">Channel info time</string>
   <string id="18010">Info on channel switch</string>
   <string id="18011">Timeout requested channel info</string>
-  <string id="18013">EPG</string>
-  <string id="18014">EPG scan timeout</string>
-  <string id="18015">EPG update timeout</string>
   <string id="18016">Days to save EPG inside Database</string>
   <string id="18017">Recording</string>
   <string id="18018">Instant record time</string>
@@ -1785,6 +1782,13 @@
   <string id="19064">Go to end</string>
   <string id="19065">Default Programm Guide</string>
   <string id="19066">Loading Recording Information from clients</string>
+  <string id="19067">Searching new EPG data</string>
+  <string id="19068">Refreshing existing EPG data</string>
+  <string id="19069">EPG</string>
+  <string id="19070">EPG scan timeout</string>
+  <string id="19071">EPG update timeout</string>
+  <string id="19072">Ignore Database for PVR-Server EPG</string>
+  <string id="19073">Channel entry timeout</string>
 
   <string id="19499">Other/Unknown</string>
   <string id="19500">Movie/Drama</string>
