--- a/language/Spanish/strings.xml
+++ b/language/Spanish/strings.xml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <!--Language file translated with Team XBMC Translator-->
-<!--Translator: bardenas-->
-<!--Date of translation: 11/23/2009-->
-<!--Alterations by jurrabi-->
-<!--Date of alterations: 12/20/2009-->
+<!--Translator: A.Soto-->
+<!--Email: asoto@eresmas.net-->
+<!--Date of translation: 01/09/2010-->
 <!--$Revision$-->
+<!--Based on english strings version 25744-->
 <strings>
   <string id="0">Programas</string>
   <string id="1">Imágenes</string>
@@ -1186,7 +1186,7 @@ para esta visualización</string>
   <string id="13411">Velocidad mínima de ventilador</string>
   <string id="13412">Los feeds RSS contienen texto de derecha a izquierda</string>
   <string id="13413">Descargando</string>
-  <string id="13414">Ocultar artistas que sólo aparecen en recopilaciones</string>
+  <string id="13414">Incluir artistas que sólo aparecen en recopilaciones</string>
   <string id="13415">Método de renderizado</string>
   <string id="13416">Auto detectar</string>
   <string id="13417">Sombreado básico (ARB)</string>
@@ -1842,7 +1842,7 @@ para esta visualización</string>
   <string id="20366">* Todas las temporadas</string>
   <string id="20367">Ocultar los vistos</string>
   <string id="20368">Código de Prod.</string>
-  <string id="20369">Ocultar el argumento de elementos no vistos</string>
+  <string id="20369">Mostrar el argumento de elementos no vistos</string>
   <string id="20370">* Oculto para prevenir desenlaces *</string>
   <string id="20371">Establecer miniatura de la temporada</string>
   <string id="20372">Imagen de la temporada</string>
@@ -2125,7 +2125,7 @@ para esta visualización</string>
   <string id="22036">Importar títulos de karaoke...</string>
   <string id="22037">Mostrar selector de canciones automáticamente</string>
   <string id="22038">Exportar títulos de karaoke...</string>
-  <string id="22039">Introduzca nombre de canción</string>
+  <string id="22039">Introduzca número de canción</string>
   <string id="22040">Blanco/Verde</string>
   <string id="22041">Blanco/Rojo</string>
   <string id="22042">Blanco/Azul</string>
@@ -2137,7 +2137,7 @@ para esta visualización</string>
   <string id="23100">Reproductor externo activo</string>
   <string id="23101">Haga clic en Aceptar para cerrar el reproductor</string>
   <string id="23104">Haga clic en Aceptar cuando haya terminado la reproducción</string>
-  <string id="29800">Modo biblioteca</string>
+  <string id="29800">Modo Biblioteca</string>
   <string id="29801">Teclado QWERTY</string>
   <string id="29802">Pasarela de audio en uso</string>
   <string id="29999">Aplicar ajustes del filtro de parpadeo a los juegos</string>
@@ -2171,7 +2171,7 @@ para esta visualización</string>
   <string id="33028">Anochecer</string>
   <string id="33029">Detalles</string>
   <string id="33030">Pronóstico</string>
-  <string id="33031">CoverFlow</string>
+  <string id="33031">Flujo de portadas</string>
   <string id="33032">Traducir texto</string>
   <string id="33033">Categoría %s de lista de mapas</string>
   <string id="33034">36 horas</string>
