fixed: Typo in german string file fixed: There was no time correction for Recordings, timers and epg update
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@26638 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/German/strings.xml
+++ b/language/German/strings.xml
@@ -1896,7 +1896,7 @@
   <string id="19069">EPG</string>
   <string id="19070">Zeit bis zur EPG-Suche</string>
   <string id="19071">Zeit bis zur EPG-Aktualisierung</string>
-  <string id="19072">Ignoriere Datanbank für PVR-Server EPG</string>
+  <string id="19072">Ignoriere Datenbank für PVR-Server EPG</string>
   <string id="19073">Zeitlimit für Kanaleingabe</string>
 
   <string id="19499">Andere/Unbekannt</string>
