added: Define a recording directory for a new timer
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@26690 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1790,6 +1790,38 @@
   <string id="19071">EPG update timeout</string>
   <string id="19072">Ignore Database for PVR-Server EPG</string>
   <string id="19073">Channel entry timeout</string>
+  <string id="19074">Active:</string>
+  <string id="19075">Name:</string>
+  <string id="19076">Directory:</string>
+  <string id="19077">Radio:</string>
+  <string id="18401">Active:</string>
+  <string id="19078">Channel:</string>
+  <string id="19079">Day:</string>
+  <string id="19080">Begin:</string>
+  <string id="19081">End:</string>
+  <string id="19082">Priority:</string>
+  <string id="19083">Lifetime (days):</string>
+  <string id="19084">First day:</string>
+  <string id="19085">Unknown Channel %u</string>
+  <string id="19086">Mo-__-__-__-__-__-__</string>
+  <string id="19087">__-Tu-__-__-__-__-__</string>
+  <string id="19088">__-__-We-__-__-__-__</string>
+  <string id="19089">__-__-__-Th-__-__-__</string>
+  <string id="19090">__-__-__-__-Fr-__-__</string>
+  <string id="19091">__-__-__-__-__-Sa-__</string>
+  <string id="19092">__-__-__-__-__-__-Su</string>
+  <string id="19093">Mo-Tu-We-Th-Fr-__-__</string>
+  <string id="19094">Mo-Tu-We-Th-Fr-Sa-__</string>
+  <string id="19095">Mo-Tu-We-Th-Fr-Sa-Su</string>
+  <string id="19096">__-__-__-__-__-Sa-Su</string>
+  <string id="19097">Enter the recording name</string>
+  <string id="19098">Warning</string>
+  <string id="19099">Timer present</string>
+  <string id="19100">Delete Channel and Timer?</string>
+  <string id="19101">Channel is playing</string>
+  <string id="19102">Please switch to another Channel!</string>
+  <string id="19103">Rescan for missing icons</string>
+  <string id="19104">Enter the recording directory</string>
 
   <string id="19499">Other/Unknown</string>
   <string id="19500">Movie/Drama</string>
