--- a/language/German/strings.xml
+++ b/language/German/strings.xml
@@ -1898,6 +1898,37 @@
   <string id="19071">Zeit bis zur EPG-Aktualisierung</string>
   <string id="19072">Ignoriere Datenbank für PVR-Server EPG</string>
   <string id="19073">Zeitlimit für Kanaleingabe</string>
+  <string id="19074">Aktiv:</string>
+  <string id="19075">Name:</string>
+  <string id="19076">Ordner:</string>
+  <string id="19077">Radio:</string>
+  <string id="19078">Kanal:</string>
+  <string id="19079">Tag:</string>
+  <string id="19080">Anfang:</string>
+  <string id="19081">Ende:</string>
+  <string id="19082">Priorität:</string>
+  <string id="19083">Lebensdauer (Tage):</string>
+  <string id="19084">Erster Tag:</string>
+  <string id="19085">Unbekannter Kanal %u</string>
+  <string id="19086">Mo-__-__-__-__-__-__</string>
+  <string id="19087">__-Di-__-__-__-__-__</string>
+  <string id="19088">__-__-Mi-__-__-__-__</string>
+  <string id="19089">__-__-__-Do-__-__-__</string>
+  <string id="19090">__-__-__-__-Fr-__-__</string>
+  <string id="19091">__-__-__-__-__-Sa-__</string>
+  <string id="19092">__-__-__-__-__-__-So</string>
+  <string id="19093">Mo-Di-Mi-Do-Fr-__-__</string>
+  <string id="19094">Mo-Di-Mi-Do-Fr-Sa-__</string>
+  <string id="19095">Mo-Di-Mi-Do-Fr-Sa-So</string>
+  <string id="19096">__-__-__-__-__-Sa-So</string>
+  <string id="19097">Bitte geben Sie den Aufnahmenamen ein</string>
+  <string id="19098">Warnung</string>
+  <string id="19099">Timer vorhanden</string>
+  <string id="19100">Kanal und Timer löschen?</string>
+  <string id="19101">Kanalwiedergabe läuft</string>
+  <string id="19102">Bitte schalten Sie auf einen anderen Kanal!</string>
+  <string id="19103">Suche fehlende Kanallogos</string>
+  <string id="19104">Bitte geben Sie den Aufnahmeordner ein</string>
 
   <string id="19499">Andere/Unbekannt</string>
   <string id="19500">Movie/Drama</string>
