--- a/skin/Confluence/language/Chinese (Simple)/strings.xml
+++ b/skin/Confluence/language/Chinese (Simple)/strings.xml
@@ -47,6 +47,7 @@
   <string id="31058">系统音乐文件</string>
   <string id="31059">当前播放列表</string>
   <string id="31060">这是一个堆叠文件，请选择要播放的片段。</string>
+  <string id="31061">当前选择</string>
   
   <!-- Skin Settings labels -->
   <string id="31100"></string>
