--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -239,6 +239,10 @@
   <string id="296">Clear bookmarks</string>
   <string id="297">Audio offset</string>
   <string id="298">Bookmarks</string>
+  <string id="299">- AAC Capable Receiver</string>
+  <string id="300">- MP1 Capable Reciever</string>
+  <string id="301">- MP2 Capable Reciever</string>
+  <string id="302">- MP3 Capable Reciever</string>
   <string id="303">Delay</string>
   <string id="304">Language</string>
   <string id="305">Enabled</string>
