--- a/language/French/strings.xml
+++ b/language/French/strings.xml
@@ -2248,4 +2248,9 @@
   <string id="33081">Ce fichier est empilé, sélectionnez la partie que vous souhaitez lire.</string>
   <string id="33082">Chemin du script</string>
   <string id="33083">Activer le bouton de script personnalisé</string>
+  
+  <string id="33100">DsPlayer</string>
+  <string id="33101">Utiliser VMR9 au lieu d'EVR</string>
+  <string id="33102">Utiliser EVR au lieu de VMR9</string>
+  <string id="33103">Audio Renderer</string>
 </strings>
