updated: Swedish translation updated: Greek translation #8642, based on English r27218 (thanks to ydatografida) updated: German translation #8645, based on English r27232 (thanks to hallohome)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@27312 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/German/strings.xml
+++ b/language/German/strings.xml
@@ -1168,7 +1168,7 @@
  für diese Visualisierung verfügbar</string>
   <string id="13390">Es sind keine Einstellungen
  für diese Visualisierung verfügbar</string>
-  <string id="13391">Laufwerk öffnen/schließen</string>
+  <string id="13391">Öffnen/Schließen</string>
   <string id="13392">Bei Musikwiedergabe die Visualisierung verwenden</string>
   <string id="13393">Größe berechnen</string>
   <string id="13394">Größe des Ordners wird berechnet</string>
