--- a/language/Swedish/strings.xml
+++ b/language/Swedish/strings.xml
@@ -122,6 +122,7 @@
   <string id="167">Aktivera FTP-server</string>
   <string id="169">Upplösning</string>
   <string id="170">Justera uppdateringsfrekvens till att matcha video</string>
+  <string id="171">Sträck 4:3 innehåll till 16:9</string>
   <string id="172">Utgivningsdatum</string>
   <string id="175">Sinnesstämning</string>
   <string id="176">Stilar</string>
@@ -228,6 +229,10 @@
   <string id="296">Ta bort bokmärken</string>
   <string id="297">Ljudkompensering</string>
   <string id="298">Bokmärken</string>
+  <string id="299">- AAC-kapabel förstärkare</string>
+  <string id="300">- MP1-kapabel förstärkare</string>
+  <string id="301">- MP2-kapabel förstärkare</string>
+  <string id="302">- MP3-kapabel förstärkare</string>
   <string id="303">Fördröjning</string>
   <string id="304">Språk</string>
   <string id="305">Aktiverad</string>
