changed: replaced GUIDialogAddonBrowser.cpp/h with GUIWindowAddonBrowser.cpp/h (dialog could be based on this if needed) added: Confluence skin for GUIWindowAddonBrowser, accessed from settings menu changed: renabled DownloadQueue/DownloadQueueManager in build changed: allow const paramater passing to DownloadQueue/DownloadQueueManager changed: renamed template paramater in AddonDll.h which conflicted with new IAddon::Props() method changed: remove AddonProps from IAddon.h changed: store addon versions in struct AddonVersion rather than CStdString, allows comparison with standard operators added: basic dependency resolution to CAddonMgr (can only resolve dependencies against locally installed addons for now) changed: use AddonProps in each CAddon rather than individual fields for it's properties changed: IAddon::Parent() should return the addon's parent directly, rather than it's UUID. If no Parent exists(default case) returns an empty AddonPtr changed: removed the individual "Manage <addontype>" buttons from CGUISettings. Could add jumps to CGUIWindowAddonBrowser if neccessary
other stuff: tidy up, fixing warnings etc

git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/addons-fwork@27329 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2090,8 +2090,8 @@
   <string id="23007">New search</string>
   <string id="23008">Configure Add-on</string>
   <string id="23009">Disable Add-on</string>
-  <string id="23010">Are you sure you want to disable this add-on?</string>
-  <string id="23011">You may re-enable this from the 'Add Source' dialog</string>
+  <string id="23010">Enable Add-on</string>
+  <string id="23011">Version:</string>
   <string id="23012"></string>
   <string id="23013">Visualization</string>
   <string id="23014"></string>
