--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1924,9 +1924,9 @@
   <string id="21410">in the last</string>
   <string id="21411">not in the last</string>
   <string id="21412">Scrapers</string>
-  <string id="21413">Default Movie scraper</string>
-  <string id="21414">Default TV-Show scraper</string>
-  <string id="21415">Default Music-video scraper</string>
+  <string id="21413">Default movie scraper</string>
+  <string id="21414">Default tvshow scraper</string>
+  <string id="21415">Default musicvideo scraper</string>
   <string id="21416">Enable fallback based on scraper language</string>
   <string id="21417">- Settings</string>
   <string id="21418">Multilingual</string>
@@ -2084,90 +2084,6 @@
   <string id="22042">white/blue</string>
   <string id="22043">black/white</string>
 
-  <!-- strings 23000 thru 23999 reserved for the addons framework -->
-  <string id="23000">Add-ons</string>
-  <string id="23001">Get Add-ons</string>
-  <string id="23002">Available Add-ons</string>
-  <string id="23003">Add-on Type</string>
-  <string id="23004">Recommended</string>
-  <string id="23005">Search Add-ons</string>
-  <string id="23006">Searching..</string>
-  <string id="23007">New search</string>
-  <string id="23008">Configure Add-on</string>
-  <string id="23009">Disable Add-on</string>
-  <string id="23010">Enable Add-on</string>
-  <string id="23011">Version:</string>
-  <string id="23012"></string>
-  <string id="23013">Visualization</string>
-  <string id="23014"></string>
-  <string id="23015">PVR-Client</string>
-  <string id="23016">Script</string>
-  <string id="23017">PVR Scraper</string>
-  <string id="23018">Video Scraper</string>
-  <string id="23019">Music Scraper</string>
-  <string id="23020">Program Scraper</string>
-  <string id="23021">Screensaver</string>
-  <string id="23022">PVR Add-on</string>
-  <string id="23023">Video Add-on</string>
-  <string id="23024">Music Add-on</string>
-  <string id="23025">Program Add-on</string>
-  <string id="23026">Pictures Add-on</string>
-  <string id="23027">Weather Add-on</string>
-  <string id="23028">Audio DSP Add-on</string>
-  <string id="23029">Plugin Source</string>
-  
-  <string id="23040">Add-on can not connect</string>
-  <string id="23041">Please check your Settings or the Backend</string>
-  <string id="23042">Unknown Username for the Add-on</string>
-  <string id="23043">Do you want to open settings and try again?</string>
-  <string id="23044">Unknown Username</string>
-  <string id="23045">Wrong password for the Add-on</string>
-  <string id="23046">Wrong password</string>
-  <string id="23047">Add-on lost connection</string>
-  <string id="23048">Try to reconnect?</string>
-  <string id="23049">Add-on restarts</string>
-  <string id="23050">Add-on request restart</string>
-  <string id="23051">XBMC requires to restart</string>
-  <string id="23052">Would you like to restart now?</string>
-  <string id="23053">Missing settings</string>
-  <string id="23054">Wrong settings</string>
-  <string id="23055">Missing Files in Add-on</string>
-  <string id="23056">Add-on can not used</string>
-  <string id="23057">A unknown error is occurred</string>
-  <string id="23058">Disclaimer</string>
-  <string id="23059">Would you still use the Add-on?</string>
-  <string id="23060"></string>
-  <string id="23061">Manage Visualizations...</string>
-  <string id="23062"></string>
-  <string id="23063"></string>
-  <string id="23064">Manage Scripts...</string>
-  <string id="23065">Manage PVR Scrapers...</string>
-  <string id="23066">Manage Movie Scrapers...</string>
-  <string id="23067">Manage Music Scrapers...</string>
-  <string id="23068">Manage Music-Video Scrapers...</string>
-  <string id="23069">Manage Screensavers...</string>
-  <string id="23070">Manage TV-Show Scrapers...</string>
-  <string id="23071"></string>
-  <string id="23072"></string>
-  <string id="23073"></string>
-  <string id="23074"></string>
-  <string id="23075">Manage Weather plugins...</string>
-  <string id="23076"></string>
-  <string id="23077"></string>
-  <string id="23078"></string>
-  <string id="23080"></string>
-  <string id="23081">This Add-on can not be configured</string>
-  <string id="23082">Lock Add-on manager</string>
-  <string id="23083">Use this Add-on again</string>
-
-  <!-- strings 24000 thru 24050 reserved for external player -->
-  <string id="24000">External Player Active</string>
-  <string id="24001">Click OK to terminate the player</string>
-  <string id="24002"></string>
-  <string id="24003"></string>
-  <string id="24004">Click OK when playback has ended</string>
-  <string id="24005"></string>
-  <string id="24006"></string>
   <string id="23051">Part %i</string>
   <string id="23052">Buffering %i bytes</string>
   <string id="23053">Stopping</string>
@@ -2178,6 +2094,82 @@
   <string id="23101">Click OK to terminate the player</string>
 
   <string id="23104">Click OK when playback has ended</string>
+
+  <!-- strings 24000 thru 24299 reserved for the addons framework -->
+  <string id="24000">Add-ons</string>
+  <string id="24001">Get Add-ons</string>
+  <string id="24002">Available Add-ons</string>
+  <string id="24003">Add-on Type</string>
+  <string id="24004">Recommended</string>
+  <string id="24005">Search Add-ons</string>
+  <string id="24006">Searching..</string>
+  <string id="24007">New search</string>
+  <string id="24008">Configure Add-on</string>
+  <string id="24009">Disable Add-on</string>
+  <string id="24010">Enable Add-on</string>
+  <string id="24011">Version:</string>
+  <string id="24012"></string>
+  <string id="24013">Visualization</string>
+  <string id="24014"></string>
+  <string id="24015"></string>
+  <string id="24016">Script</string>
+  <string id="24017"></string>
+  <string id="24018">Video Scraper</string>
+  <string id="24019">Music Scraper</string>
+  <string id="24020">Program Scraper</string>
+  <string id="24021">Screensaver</string>
+  <string id="24022"></string>
+  <string id="24023">Video Add-on</string>
+  <string id="24024">Music Add-on</string>
+  <string id="24025">Program Add-on</string>
+  <string id="24026">Pictures Add-on</string>
+  <string id="24027">Weather Add-on</string>
+  <string id="24028">Audio DSP Add-on</string>
+  <string id="24029">Plugin Source</string>
+
+  <string id="24040">Add-on can not connect</string>
+  <string id="24041">Please check your Settings or the Backend</string>
+  <string id="24042">Unknown Username for the Add-on</string>
+  <string id="24043">Do you want to open settings and try again?</string>
+  <string id="24044">Unknown Username</string>
+  <string id="24045">Wrong password for the Add-on</string>
+  <string id="24046">Wrong password</string>
+  <string id="24047">Add-on lost connection</string>
+  <string id="24048">Try to reconnect?</string>
+  <string id="24049">Add-on restarts</string>
+  <string id="24050"></string>
+  <string id="24051"></string>
+  <string id="24052"></string>
+  <string id="24053">Missing settings</string>
+  <string id="24054">Wrong settings</string>
+  <string id="24055"></string>
+  <string id="24056">Add-on can not used</string>
+  <string id="24057">A unknown error is occurred</string>
+  <string id="24058">Disclaimer</string>
+  <string id="24059">Would you still like to install this Add-on?</string>
+  <string id="24060"></string>
+  <string id="24061">Manage Visualizations...</string>
+  <string id="24062"></string>
+  <string id="24063"></string>
+  <string id="24064">Manage Scripts...</string>
+  <string id="24065"></string>
+  <string id="24066">Manage Movie Scrapers...</string>
+  <string id="24067">Manage Music Scrapers...</string>
+  <string id="24068">Manage Music-Video Scrapers...</string>
+  <string id="24069">Manage Screensavers...</string>
+  <string id="24070">Manage TV-Show Scrapers...</string>
+  <string id="24071"></string>
+  <string id="24072"></string>
+  <string id="24073"></string>
+  <string id="24074"></string>
+  <string id="24075">Manage Weather plugins...</string>
+  <string id="24076"></string>
+  <string id="24077"></string>
+  <string id="24078"></string>
+  <string id="24080"></string>
+  <string id="24081">This Add-on can not be configured</string>
+  <string id="24082">Lock Add-on manager</string>
+  <string id="24083">Use this Add-on again</string>
 
   <!-- strings 29800 thru 29998 reserved strings used only in the default Project Mayhem III skin and not c++ code -->
   <string id="29800">Library Mode</string>
