--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2096,80 +2096,35 @@
   <string id="23104">Click OK when playback has ended</string>
 
   <!-- strings 24000 thru 24299 reserved for the addons framework -->
-  <string id="24000">Add-ons</string>
-  <string id="24001">Get Add-ons</string>
-  <string id="24002">Available Add-ons</string>
-  <string id="24003">Add-on Type</string>
-  <string id="24004">Recommended</string>
-  <string id="24005">Search Add-ons</string>
-  <string id="24006">Searching..</string>
-  <string id="24007">New search</string>
-  <string id="24008">Configure Add-on</string>
-  <string id="24009">Disable Add-on</string>
-  <string id="24010">Enable Add-on</string>
-  <string id="24011">Version:</string>
-  <string id="24012"></string>
-  <string id="24013">Visualization</string>
-  <string id="24014"></string>
-  <string id="24015"></string>
-  <string id="24016">Script</string>
-  <string id="24017"></string>
-  <string id="24018">Video Scraper</string>
-  <string id="24019">Music Scraper</string>
-  <string id="24020">Program Scraper</string>
-  <string id="24021">Screensaver</string>
-  <string id="24022"></string>
-  <string id="24023">Video Add-on</string>
-  <string id="24024">Music Add-on</string>
-  <string id="24025">Program Add-on</string>
-  <string id="24026">Pictures Add-on</string>
-  <string id="24027">Weather Add-on</string>
-  <string id="24028">Audio DSP Add-on</string>
-  <string id="24029">Plugin Source</string>
+  <string id="24000">Add-on</string>
+  <string id="24001">Add-ons</string>
 
-  <string id="24040">Add-on can not connect</string>
-  <string id="24041">Please check your Settings or the Backend</string>
-  <string id="24042">Unknown Username for the Add-on</string>
-  <string id="24043">Do you want to open settings and try again?</string>
-  <string id="24044">Unknown Username</string>
-  <string id="24045">Wrong password for the Add-on</string>
-  <string id="24046">Wrong password</string>
-  <string id="24047">Add-on lost connection</string>
-  <string id="24048">Try to reconnect?</string>
-  <string id="24049">Add-on restarts</string>
-  <string id="24050"></string>
-  <string id="24051"></string>
-  <string id="24052"></string>
-  <string id="24053">Missing settings</string>
-  <string id="24054">Wrong settings</string>
-  <string id="24055"></string>
-  <string id="24056">Add-on can not used</string>
-  <string id="24057">A unknown error is occurred</string>
-  <string id="24058">Disclaimer</string>
-  <string id="24059">Would you still like to install this Add-on?</string>
-  <string id="24060"></string>
-  <string id="24061">Manage Visualizations...</string>
-  <string id="24062"></string>
-  <string id="24063"></string>
-  <string id="24064">Manage Scripts...</string>
-  <string id="24065"></string>
-  <string id="24066">Manage Movie Scrapers...</string>
-  <string id="24067">Manage Music Scrapers...</string>
-  <string id="24068">Manage Music-Video Scrapers...</string>
-  <string id="24069">Manage Screensavers...</string>
-  <string id="24070">Manage TV-Show Scrapers...</string>
-  <string id="24071"></string>
-  <string id="24072"></string>
-  <string id="24073"></string>
-  <string id="24074"></string>
-  <string id="24075">Manage Weather plugins...</string>
-  <string id="24076"></string>
-  <string id="24077"></string>
-  <string id="24078"></string>
-  <string id="24080"></string>
-  <string id="24081">This Add-on can not be configured</string>
-  <string id="24082">Lock Add-on manager</string>
-  <string id="24083">Use this Add-on again</string>
+  <string id="24005">Plugin</string>
+  <string id="24007">Scraper</string>
+  <string id="24008">Screensaver</string>
+  <string id="24009">Script</string>
+  <string id="24010">Visualization</string>
+
+  <string id="24020">Configure Add-on</string>
+  <string id="24021">Disable Add-on</string>
+  <string id="24022">Enable Add-on</string>
+  <string id="24030">This Add-on can not be configured</string>
+
+  <string id="24050">Available Add-ons</string>
+  <string id="24051">Version:</string>
+  <string id="24052">Disclaimer:</string>
+  <string id="24053">License:</string>
+  <string id="24059">Would you like to install this Add-on?</string>
+
+  <string id="24070">Add-on can not used</string>
+  <string id="24071">An unknown error has occurred</string>
+  <string id="24072">Settings required</string>
+  <string id="24073">Could not connect</string>
+  <string id="24074">Needs to restart</string>
+  <string id="24080">Try to reconnect?</string>
+  <string id="24089">Add-on restarts</string>
+
+  <string id="24090">Lock Add-on manager</string>
 
   <!-- strings 29800 thru 29998 reserved strings used only in the default Project Mayhem III skin and not c++ code -->
   <string id="29800">Library Mode</string>
