--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2084,6 +2084,7 @@
   <string id="22042">white/blue</string>
   <string id="22043">black/white</string>
 
+  <string id="23050">Activate Teletext</string>
   <string id="23051">Part %i</string>
   <string id="23052">Buffering %i bytes</string>
   <string id="23053">Stopping</string>
