fixed: dozy comment in Scraper.cpp changed: CGUIDialogAddonSettings: alert user when addon has settings, but settings fail to load revert: CGUIDialogAddonSettings: any changes from CGUIDialogPluginSettings which are not needed
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/addons-fwork@27483 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2110,6 +2110,7 @@
   <string id="24021">Disable Add-on</string>
   <string id="24022">Enable Add-on</string>
   <string id="24030">This Add-on can not be configured</string>
+  <string id="24031">Error loading settings</string>
 
   <string id="24050">Available Add-ons</string>
   <string id="24051">Version:</string>
