changed: Updated MediaPortal client with the latest patch from Ticket #8525
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@27531 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/addons/pvr/MediaPortal/resources/language/Dutch/strings.xml
+++ b/addons/pvr/MediaPortal/resources/language/Dutch/strings.xml
@@ -9,4 +9,6 @@
     <string id="30005">Verbindingstimeout (s)</string>
     <string id="30006">Importeer alleen TV kanalen uit groep</string>
     <string id="30007">Importeer alleen radio kanalen uit groep</string>
+    <string id="30008">Converteer hostnaam naar IP adres</string>
+    <string id="30009">EPG: Genre tekst inlezen (traag)</string>
 </strings>
