--- a/addons/pvr/MediaPortal/resources/language/English/strings.xml
+++ b/addons/pvr/MediaPortal/resources/language/English/strings.xml
@@ -9,4 +9,6 @@
     <string id="30005">Connect timeout (s)</string>
     <string id="30006">Import only TV Channels from group</string>
     <string id="30007">Import only Radio Channels from group</string>
+    <string id="30008">Convert hostname to IP-adress</string>
+    <string id="30009">EPG: Read genre strings (slow)</string>
 </strings>
