--- a/addons/pvr/MediaPortal/resources/language/German/strings.xml
+++ b/addons/pvr/MediaPortal/resources/language/German/strings.xml
@@ -9,4 +9,6 @@
     <string id="30005">Verbindungszeitüberlauf (s)</string>
     <string id="30006">Importiere nur TV Kanäle aus Gruppe</string>
     <string id="30007">Importiere nur Radiokanäle aus Gruppe</string>
+    <string id="30008">Konvertiere Hostname nach IP-Adresse</string>
+    <string id="30009">EPG: Genre Texte hochladen (langsam)</string>
 </strings>
